adding outflow features
